Fix some dark mode issues

--- a/style.css
+++ b/style.css
@@ -268,6 +268,8 @@ h1 {
 /* Weather Widget */
 .weather {
     color: var(--text-color-light);
+	background:white;
+	box-shadow: 0px 0px 5px black;
     font-family: monospace;
     font-size: 3vw;
     position: relative;
